<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainNavigation">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/heightip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_height"
            android:textSize="19sp"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>
        <TextView
            android:id="@+id/NavChExistingMapTextView"
            android:layout_width="wrap_content"
            android:layout_height="25sp"
            android:text="@string/choose_from_existing_maps"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="19sp" />

        <Spinner
            android:id="@+id/NavigationLoadMapSpinner"
            android:layout_width="255dp"
            android:layout_height="57dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>

        <TextView
            android:id="@+id/NavChSrcTextView"
            android:layout_width="wrap_content"
            android:layout_height="25sp"
            android:text="@string/choose_source_node"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="19sp"
            android:visibility="invisible" />

        <Spinner
            android:id="@+id/NavSourceNodeSpinner"
            android:layout_width="255dp"
            android:layout_height="57dp"
            android:visibility="invisible" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>

        <TextView
            android:id="@+id/NavChDestTextView"
            android:layout_width="wrap_content"
            android:layout_height="25sp"
            android:text="@string/choose_destination_node"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="19sp"
            android:visibility="invisible" />

        <Spinner
            android:id="@+id/NavDestNodeSpinner"
            android:layout_width="255dp"
            android:layout_height="57dp"
            android:visibility="invisible" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>

        <Button
            android:id="@+id/StartNavigation"
            android:layout_width="167dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:onClick="onSendButtonClick"
            android:text="@string/startnavigation"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>