<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mapping">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/createnode"
            android:layout_width="139dp"
            android:layout_height="51dp"
            android:background="@android:color/holo_green_light"
            android:onClick="onCreateNodeButtonClick"
            android:text="@string/create_node"
            android:textColor="@color/colorPrimaryDark" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>
        <Button
            android:id="@+id/joinnode"
            android:layout_width="139dp"
            android:layout_height="51dp"
            android:background="@android:color/holo_green_light"
            android:onClick="onJoinNodesButtonClick"
            android:text="@string/join_node"
            android:textColor="@color/colorPrimaryDark" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>
        <Button
            android:id="@+id/SaveMapButton"
            android:layout_width="139dp"
            android:layout_height="51dp"
            android:background="@android:color/holo_green_light"
            android:onClick="OnSaveButtonClick"
            android:text="@string/save_map"
            android:textColor="@color/colorPrimaryDark" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>