<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JoinNode">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="208dp"
            android:layout_height="31dp"
            android:text="@string/choose_source_node"
            android:textSize="19sp"
            android:textColor="@color/colorPrimaryDark" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>
        <Spinner
            android:id="@+id/StartNodeSpinner"
            android:layout_width="308dp"
            android:layout_height="31dp"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/choose_destination_node"
            android:textSize="19sp"
            android:textColor="@color/colorPrimaryDark" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>
        <Spinner
            android:id="@+id/DestinationNodeSpinner"
            android:layout_width="309dp"
            android:layout_height="40dp" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>
        <Button
            android:id="@+id/createEdgeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/send"
            android:textSize="19sp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@android:color/holo_green_light"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>