<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNode">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/NodeNameTextView"
            android:layout_width="194dp"
            android:layout_height="40dp"
            android:text="@string/enter_node_name"
            android:textSize="19sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>
        <EditText
            android:id="@+id/NodeNameEditText"
            android:layout_width="194dp"
            android:layout_height="40dp"
            android:hint="@string/enter_node_name"
            android:inputType="textPersonName"
            android:textSize="19sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>
        <TextView
            android:id="@+id/NodeDescriptionTextView"
            android:layout_width="230dp"
            android:layout_height="60dp"
            android:text="@string/enter_node_description"
            android:textSize="19sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"/>
        <EditText
            android:id="@+id/NodeDescriptionEditText"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:hint="@string/enter_node_description"
            android:inputType="textPersonName"
            android:textSize="19sp"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>
        <Button
            android:id="@+id/SendNodeNameButton"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@android:color/holo_green_light"
            android:onClick="onButtonClick"
            android:text="@string/send"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="19sp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>